@@ -6,10 +6,14 @@
 ================
 Annotation configuration:
  - JPAAnnotationsConfigurer does not configure a NotNullCheck for fields with @Column(nullable=false)
-   that also have @javax.persistence.GeneratedValue or @javax.persistence.Version specified (thanks to Jim Greene)
+   that also have @javax.persistence.GeneratedValue or @javax.persistence.Version specified 
  * renamed @Guarded.applyFieldConstraintsToSetter to @Guarded.applyFieldConstraintsToSetters
  + added @Guarded.applyFieldConstraintsToConstructors to @Guarded.applyFieldConstraintsToConstructors
- 
+ * JPAAnnotationsConfigurer constraint mappings extended:
+	@javax.persistence.OneToOne  => @net.sf.oval.constraints.AssertValid
+	@javax.persistence.OneToMany => @net.sf.oval.constraints.AssertValid
+	@javax.persistence.ManyToOne => @net.sf.oval.constraints.AssertValid
+
 Built-in constraints:
  + added @net.sf.oval.constraint.NotBlank (thanks to Dennis Kieselhorst)
 
